# please

./: .gitignore  CMakeLists.txt  README.md  README.rst  please
docs/: coding_standards.rst  doxygen.cfg  git_workflow.rst  interview_test.rst  setup_tools.rst
include/blop/BuildInfo/: BuildInfo.h
include/blop/CommandLine/: CommandLine.h
include/blop/HelloWorld/: HelloWorld.h
include/blop/Log/: Log.h
lib/BuildInfo/: BuildInfo.cpp  CMakeLists.txt
lib/CommandLine/: BoostCommandLine.cpp  BoostCommandLine.h  CMakeLists.txt  CommandLine.cpp
lib/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
lib/Log/: BoostLogger.cpp  BoostLogger.h  CMakeLists.txt  Log.cpp
src/hello_world/: CMakeLists.txt  main.cpp
src/unittests/: CMakeLists.txt  main.cpp
tools/docker/: basic_debian_setup.sh  debian_install_docker.sh  dev.Dockerfile  jenkins.Dockerfile  work.Dockerfile
unittests/HelloWorld/: CMakeLists.txt  HelloWorldTest.cpp
